# school-bus-decision-system

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
data/sample/: sample_school_bus_data.csv
pages/: decision_engine.py  district_explorer.py  equity.py  executive.py  fleet_tech.py  methodology.py
scripts/: export_priority_snapshot.py
src/components/: charts.py  ui.py
src/data/: decision.py  loader.py  processor.py
src/school_bus_cli/: export_priority.py
src/school_bus_dashboard/: __init__.py  charts.py  config.py  dashboard.py  data_loader.py  insights.py  metrics.py  preprocessing.py  schema.py
src/utils/: helpers.py
tests/: test_decision.py  test_processor.py
